<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/FormErrorText"
        app:hintTextAppearance="@style/FormHintText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_add_child_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name"
            android:theme="@style/FormEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/FormErrorText"
        app:hintTextAppearance="@style/FormHintText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_add_child_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_surname"
            android:theme="@style/FormEditText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/FormErrorText"
        app:hintTextAppearance="@style/FormHintText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_add_child_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_age"
            android:inputType="number"
            android:theme="@style/FormEditText" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/rg_add_child_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tooltipText="@string/form_gender">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_gender"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_add_member_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/form_male" />

        <RadioButton
            android:id="@+id/rb_add_member_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_female" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_add_child_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/action_save" />
</LinearLayout>
